# saras

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  skills-lock.json
backend/: .coverage  .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  seed_evals.py
backend/saras/: config.py  main.py
backend/saras/api/: agents.py  builder.py  datasets.py  evals.py  health.py  projects.py  samples.py  simulator.py  traces.py
backend/saras/assets/: sample_customer_support.yaml  sample_financial_analyst.yaml  sample_travel_concierge.yaml
backend/saras/core/: compiler.py  executor.py  schema.py  validator.py
backend/saras/db/: duckdb.py  models.py  postgres.py  redis.py
backend/saras/db/migrations/: env.py
backend/saras/db/migrations/versions/: 001_cascade_delete_runs_on_agent.py  002_eval_schema_additions.py
backend/saras/evals/: judge.py  presets.py  runner.py  schemas.py
backend/saras/evals/metrics/: __init__.py  base.py  bleu.py  completion_metrics.py  context_metrics.py  llm_judge.py  quality_metrics.py  registry.py  rouge_l.py  semantic_similarity.py  slot_fill_efficiency.py  tone_metric.py  tool_call_accuracy.py
backend/saras/providers/: litellm.py
backend/saras/tracing/: collector.py  query.py
backend/tests/: conftest.py  factories.py
backend/tests/e2e/: test_agent_lifecycle.py
backend/tests/fixtures/: sample_agent.yaml
backend/tests/fixtures/llm_responses/: judge_score.json  llm_turn.json  router_decision.json
backend/tests/integration/api/: test_agents.py  test_datasets.py  test_evals.py  test_projects.py  test_traces.py
backend/tests/integration/db/: test_models.py
backend/tests/unit/core/: test_compiler.py  test_executor.py  test_schema.py  test_validator.py
backend/tests/unit/evals/: test_metric_classes.py  test_metrics.py
backend/tests/unit/tracing/: test_query.py
docs/: builder-roadmap.md  changelog.md  getting-started.md  index.md  sdk.md  self-hosting.md  why-saras.md
(+92 files in other folders)
